updated service page

--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -8,23 +8,23 @@
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
               <div class="card-body">
-                <h5 class="card-header text-center text-white bg-dark"><strong>STLC SUPPORT</strong> </h5>
-                <p class="card-text"> <strong> High software quality on every step of the software engineering process.</strong> </p>
+                <h5 class="card-header text-center text-white bg-dark">STLC SUPPORT</h5>
+                <h5 class="card-text"> High software quality on every step of the software engineering process. </h5>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                <h5 class="card-header text-center text-white bg-dark"><strong> MANUAL TESTING</strong>  </h5>
-                <p class="card-text"> <strong>your software application is fully-compliant with defined business requirements.</strong> </p>
+                <h5 class="card-header text-center text-white bg-dark">MANUAL TESTING  </h5>
+                <h5 class="card-text"> your software application is fully-compliant with defined business requirements.</h5>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                <h5 class="card-header text-center text-white bg-dark"><strong> TEST AUTOMATION</strong> </h5>
-                <p class="card-text"><strong> Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, QTP, etc.
-                  </strong> </p>
+                <h5 class="card-header text-center text-white bg-dark"> TEST AUTOMATION  </h5>
+              <h5 class="card-text"> Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, QTP, etc.
+              </h5>
               </div>
             </div>
           </div>
@@ -32,24 +32,24 @@
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-header text-center text-white bg-dark"><strong> SECURITY TESTING</strong> </h5>
-                  <p class="card-text"><strong> Testing to ensure the application is secure against any vulnerability and SQL Injections.
-                    </strong> </p>
+                  <h5 class="card-header text-center text-white bg-dark"> SECURITY TESTING </h5>
+                <h5 class="card-text">Testing to ensure the application is secure against any vulnerability and SQL Injections.
+                </h5>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-header text-center text-white bg-dark"><strong> USABILITY TESTING</strong> </h5>
-                  <p class="card-text"><strong> Identify all the usability issues before the application is released to the end-users.
-                    </strong> </p>
+                  <h5 class="card-header text-center text-white bg-dark">USABILITY TESTING </h5>
+                <h5 class="card-text"> Identify all the usability issues before the application is released to the end-users.
+              </h5>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
-                  <h5 class="card-header text-center text-white bg-dark"><strong> REST API TESTING </strong> </h5>
-                  <p class="card-text"><Strong>Testing Rest API with Postman.</Strong></p>
+                  <h5 class="card-header text-center text-white bg-dark">REST API TESTING </h5>
+                <h5 class="card-text"> Testing Rest API with Postman.</h5>
                 </div>
               </div>
 
@@ -62,27 +62,27 @@
   <div class="card">
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
     <div class="card-body">
-      <h5 class="card-header text-center text-white bg-dark"><strong> PERFORMANCE TESTING</strong> </h5>
-      <p class="card-text"><strong>  Testing for Speed, Stability, and Scalability to ensure the application performs well under stress and peak load.
-          </strong> </p>
+      <h5 class="card-header text-center text-white bg-dark"> PERFORMANCE TESTING </h5>
+    <h5 class="card-text">Testing for Speed, Stability, and Scalability to ensure the application performs well under stress and peak load.
+    </h5>
     </div>
   </div>
 
   <div class="card">
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
    <div class="card-body">
-      <h5 class="card-header text-center text-white bg-dark"><strong> MOBILE TESTING</strong>  </h5>
-      <p class="card-text"><strong>Mobile automation testing with an industry-leading tool like Appium.
-        </strong> </p>
+      <h5 class="card-header text-center text-white bg-dark"> MOBILE TESTING </h5>
+    <h5 class="card-text">Mobile automation testing with an industry-leading tool like Appium.
+    </h5>
     </div>
   </div>
   <div class="card">
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
    <div class="card-body">
-      <h5 class="card-header text-center text-white bg-dark"><strong> TESTING FRAMEWORK </strong> </h5>
-      <p class="card-text"><strong> Data-Driven Framework, KeyWord Framework, Hybrid Framework, Page Object Model Framework.
-</strong> </p>
-    </div>
+      <h5 class="card-header text-center text-white bg-dark">TESTING FRAMEWORK </h5>
+    <h5 class="card-text">Data-Driven Framework, KeyWord Framework, Hybrid Framework, Page Object Model Framework.
+    </h5>
+  </div>
   </div>
 </div>
 
