--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -9,22 +9,22 @@
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
               <div class="card-body">
                 <h5 class="card-header text-center text-white bg-dark">STLC SUPPORT</h5>
-                <h5 class="card-text"> High software quality on every step of the software engineering process. </h5>
+                <p class="card-text lead"> High software quality on every step of the software engineering process. </p>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                 <h5 class="card-header text-center text-white bg-dark">MANUAL TESTING  </h5>
-                <h5 class="card-text"> your software application is fully-compliant with defined business requirements.</h5>
+                <p class="card-text lead">your software application is fully-compliant with defined business requirements.</p>
               </div>
             </div>
             <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                 <h5 class="card-header text-center text-white bg-dark"> TEST AUTOMATION  </h5>
-              <h5 class="card-text"> Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, QTP, etc.
-              </h5>
+                <p class="card-text lead"> Help you to automate your testing needs with core expertise on all industry-leading tools like Selenium, QTP, etc.
+                </p>
               </div>
             </div>
           </div>
@@ -33,23 +33,23 @@
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                   <h5 class="card-header text-center text-white bg-dark"> SECURITY TESTING </h5>
-                <h5 class="card-text">Testing to ensure the application is secure against any vulnerability and SQL Injections.
-                </h5>
+                  <p class="card-text lead">Testing to ensure the application is secure against any vulnerability and SQL Injections.
+                  </p>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                   <h5 class="card-header text-center text-white bg-dark">USABILITY TESTING </h5>
-                <h5 class="card-text"> Identify all the usability issues before the application is released to the end-users.
-              </h5>
+                  <p class="card-text lead"> Identify all the usability issues before the application is released to the end-users.
+                  </p>
                 </div>
               </div>
               <div class="card">
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                   <h5 class="card-header text-center text-white bg-dark">REST API TESTING </h5>
-                <h5 class="card-text"> Testing Rest API with Postman.</h5>
+                  <p class="card-text lead"> Testing Rest API with Postman.</p>
                 </div>
               </div>
 
@@ -63,8 +63,8 @@
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
     <div class="card-body">
       <h5 class="card-header text-center text-white bg-dark"> PERFORMANCE TESTING </h5>
-    <h5 class="card-text">Testing for Speed, Stability, and Scalability to ensure the application performs well under stress and peak load.
-    </h5>
+      <p class="card-text lead">Testing for Speed, Stability, and Scalability to ensure the application performs well under stress and peak load.
+      </p>
     </div>
   </div>
 
@@ -72,16 +72,16 @@
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
    <div class="card-body">
       <h5 class="card-header text-center text-white bg-dark"> MOBILE TESTING </h5>
-    <h5 class="card-text">Mobile automation testing with an industry-leading tool like Appium.
-    </h5>
+      <p class="card-text lead"> Automation testing with an industry-leading tool like Appium.
+      </p>
     </div>
   </div>
   <div class="card">
    <!--<img class="card-img-top" src="..." alt="Card image cap">-->
    <div class="card-body">
       <h5 class="card-header text-center text-white bg-dark">TESTING FRAMEWORK </h5>
-    <h5 class="card-text">Data-Driven Framework, KeyWord Framework, Hybrid Framework, Page Object Model Framework.
-    </h5>
+      <p class="card-text lead">Data-Driven Framework, KeyWord Framework, Hybrid Framework, Page Object Model Framework.
+      </p>
   </div>
   </div>
 </div>
