--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -57,7 +57,7 @@
         </ol>
 
 
-           <div class="container">
+           <div class="container table-responsive">
           &nbsp;
               <h4>Some of the major courses that I have studied at Centennial College.</h4>
               &nbsp;
