--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -16,7 +16,7 @@
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                 <h5 class="card-header text-center text-white bg-dark">MANUAL TESTING  </h5>
-                <p class="card-text lead">your software application is fully-compliant with defined business requirements.</p>
+                <p class="card-text lead">Your software application is fully-compliant with defined business requirements.</p>
               </div>
             </div>
             <div class="card">
