New Updates Project page, contact page and service page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -8,22 +8,24 @@
 
       <p class="lead">
         <br>
-        Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  <strong>software engineering technology </strong> three years program at
-          Centennial College with
-           <strong>honours designation</strong>. Also, I am <strong> ISTQB Certified Tester</strong> and <strong> ISTQB Agile Extension Certified Tester</strong>. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
+        Hi there! I’m Abdul Shukor from Toronto, Canada. I have done  a <strong>software engineering technology </strong>three years program at
+          Centennial College with an
+           <strong>honours designation</strong>. Besides, I am <strong> ISTQB Certified Tester</strong> and <strong> ISTQB Agile Extension Certified Tester</strong>.
+           I am pursuing a Bachelor of Computer Science (Honours) at Ryerson University, Toronto.
+           I am a dedicated, detail-oriented, and skilled Software Test Engineer with more than 1-year experience in Automation and Manual
+Testing. I am a passionate individual who is driven by curiosity and a desire to learn, embracing
            inclusion and committed to leading high performing teams in a culture of excellence with integrity and has a
            practical approach to problem-solving and a drive to see things through to completion. Besides, I am a fast
-           learner and an excellent listener. I have excellent interpersonal and communication skills and I am a very
-           social, friendly and respectful person toward others.
+           learner and an excellent listener. I have good analytical, communication, interpersonal skills, an excellent team player, and I am a very social, friendly, and respectful person toward others.
 
       </p>
       <p class="lead">
-          I have done several academic projects throughout the program in the Centennial College, some of them I listed on the Projects page. During the
-          program and implementation of these projects, I obtained knowledge on the following Technical skills
+        <strong>      My technical strengths including, but not limited to the following
+        </strong>
 
      </p>
 
-     <ul>
+     <ul><strong>
         <li>AWS Development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch </li>
         <li>Languages & Scripting languages: Java Scripting, Core Java, C#, .Net Core, Asp.net, Angular, JavaScript, TypeScript, Node.js,
       Express.js and SQL
@@ -46,6 +48,7 @@
       <li>Microsoft Office: MS Word, MS Excel, MS PowerPoint, MS Access</li>
     <li>Development and Automation Testing Tools: Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio,
     Eclipse, Visual Paradigm, Visio, IntelliJ</li>
+  </strong>
   </ul>
 
 
@@ -58,7 +61,7 @@
         </ol>
 
 
-           <div class="container table-responsive">
+          <!--<div class="container table-responsive">
           &nbsp;
               <h4>Some of the major courses that I have studied at Centennial College.</h4>
               &nbsp;
@@ -128,11 +131,11 @@
                 </tbody>
               </table>
             </div>
-
+          -->
 
      <!--the button for downloading my resume-->
-<h4>Download my updated resume</h4>
+<!--<h4>Download my updated resume</h4>
 <a href="/assets/documents/Abdul Shukor.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
-<hr class="my-9" />
+<hr class="my-9" />-->
   </div>
 </div>
