--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -20,7 +20,7 @@
           <div class="col" style="padding-right: 12rem">
             <h5>Abdul Shukor</h5>
             <h5>(416)-456-4101</h5>
-            <h5>ashukor12@gmail.com</h5>
+            <h5>abdulshukor019@gmail.com</h5>
             <h5>Toronto/Canada</h5>
           </div>
         </div>
