--- a/client/src/app/pages/projects/projects.component.html
+++ b/client/src/app/pages/projects/projects.component.html
@@ -26,13 +26,11 @@
 
     <p class="lead">
       <br>
-      I created a WorkForce web API for unemployment educated people who are looking for a job.
-      The WorkForce API is securely accessing unemployed employee data from AWS-RDS database.
-      The potential customer of the WorkForce is an employer, but it can be consumed for many
-      different purposes. For developing WorkForce, I used these technologies, C#.Net Core2.1,
-      AWS-RDS, swagger, JSON, XML, Postman, Apigee API management platform, and hosted on AWS
-      Elastic Beanstalk. My role was creating API, documenting, testing
-      and securing API through Apigee API Security management.
+      Developed WorkForce web API for current and graduated students who are looking for a job. The WorkForce API is
+securely accessing student’s data from the AWS-RDS database. The potential customer of the WorkForce is an employer.
+The API can be consumed for many different purposes for desktop and web applications. For developing the WorkForce, I
+used, C#.Net Core2.1, AWS-RDS, swagger, JSON, XML, Postman, Apigee API management platform, and hosted on AWS
+Elastic Beanstalk.
     </p>
 
     <div class="alert  alert-secondary" role="alert">
@@ -64,14 +62,32 @@
 
     <p class="lead">
       <br>
-      Created favorite books application with user authentication. For developing the application, I used
-      node.js, express, ejs, mLab, CSS, Bootstrap, GitHub and hosted on herokuapp.com.
+      Designed and developed a favorite book web application with user authentication. The purpose of the application is to
+create a favorite book list of a user. For adding a book to the list, a user must first register with the app and then can log
+in to the application. The user identification will be checked by the app while logging. A user can perform CRUD operation
+on their book list. For developing the app, I used, node.js, express, ejs, mLab, CSS, Bootstrap, Git, GitHub, and hosted on
+herokuapp.com.
+      <br>
+      <strong>Project URL:</strong>
       <br>
       <strong>comp308w2019midterm30091983.herokuapp.com</strong>
 
     </p>
+     <br>
+     <div class="alert  alert-secondary" role="alert">
+    <h4>5. Selenium automated framework:</h4>
+    </div>
 
+    <p class="lead">
+      Created an automated test framework from scratch for qaclickacademy.com. The purpose was to discover bugs in the
+application by using the selenium web driver. Implemented the Page Object mechanism to drive test cases and created
+parameterized test cases with multiple data with TestNG and did the cross-browser testing. Validated test cases through
+assertion and generated HTML reports on test execution. For developing the frame, I used, Maven, TestNG, Jinkins, Log4j,
+and selenium web driver.
+
+    </p>
     <hr class="my-9" />
   </div>
+
 
 </div>
