--- a/client/src/app/pages/services/services.component.html
+++ b/client/src/app/pages/services/services.component.html
@@ -49,7 +49,7 @@
              <!--<img class="card-img-top" src="..." alt="Card image cap">-->
              <div class="card-body">
                   <h5 class="card-header text-center text-white bg-dark">REST API TESTING </h5>
-                  <p class="card-text lead"> Testing Rest API with Postman.</p>
+                  <p class="card-text lead"> Testing Rest API with Postman, Newman, Docker, Jinkins.</p>
                 </div>
               </div>
 
