Updated about page

--- a/client/src/app/pages/about/about.component.html
+++ b/client/src/app/pages/about/about.component.html
@@ -19,12 +19,19 @@ Testing. I am a passionate individual who is driven by curiosity and a desire to
            learner and an excellent listener. I have good analytical, communication, interpersonal skills, an excellent team player, and I am a very social, friendly, and respectful person toward others.
 
       </p>
+      <h4 class="display-6">Professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h4>
+         <ol>
+          <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
+          </li>
+          <li><strong>ISTQB Agile Extension Certified Tester (2019)</strong></li>
+        </ol>
+
       <p class="lead">
         <strong>      My technical strengths including, but not limited to the following
         </strong>
 
      </p>
-
+<!--
      <ul><strong>
         <li>AWS Development: EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, Route 53, IAM, CloudWatch </li>
         <li>Languages & Scripting languages: Java Scripting, Core Java, C#, .Net Core, Asp.net, Angular, JavaScript, TypeScript, Node.js,
@@ -51,14 +58,9 @@ Testing. I am a passionate individual who is driven by curiosity and a desire to
   </strong>
   </ul>
 
+-->
 
 
-     <h4 class="display-6">Professional Certificates &nbsp;<i class="fa fa-certificate" aria-hidden="true"></i></h4>
-         <ol>
-          <li><strong>ISTQB Certified Tester, CTFL (2019)</strong>
-          </li>
-          <li><strong>ISTQB Agile Extension Certified Tester (2019)</strong></li>
-        </ol>
 
 
           <!--<div class="container table-responsive">
@@ -133,9 +135,156 @@ Testing. I am a passionate individual who is driven by curiosity and a desire to
             </div>
           -->
 
+
+                <div class="card-deck">
+                    <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                      <div class="card-body">
+                        <h5 class="card-header text-center text-white bg-dark">AWS Development</h5>
+                        <p class="card-text lead"> EC2, Lambda, Elastic Beanstalk, S3, RDS, DynamoDB, IAM, CloudWatch </p>
+                      </div>
+                    </div>
+                    <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                     <div class="card-body">
+                        <h5 class="card-header text-center text-white bg-dark">Languages </h5>
+                        <p class="card-text lead">Core Java, C#, .Net Core, Asp.net, Angular, JavaScript, TypeScript, Node.js,
+                          Express.js, SQL</p>
+                      </div>
+                    </div>
+                    <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                     <div class="card-body">
+                        <h5 class="card-header text-center text-white bg-dark"> Web Technologies </h5>
+                        <p class="card-text lead">  Bootstrap, HTML5, XML, CSS, DOM
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-deck">
+                      <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                     <div class="card-body">
+                          <h5 class="card-header text-center text-white bg-dark"> Restful API Development and Testing </h5>
+                          <p class="card-text lead"> XML, JSON, Swagger, Postman,Newman
+                          </p>
+                        </div>
+                      </div>
+                      <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                     <div class="card-body">
+                          <h5 class="card-header text-center text-white bg-dark">Databases</h5>
+                          <p class="card-text lead">  Oracle SQL, PL/SQL, MySQL, Microsoft SQL Server, MongoDB
+                          </p>
+                        </div>
+                      </div>
+                      <div class="card">
+                     <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+                     <div class="card-body">
+                          <h5 class="card-header text-center text-white bg-dark">Web Application Security </h5>
+                          <p class="card-text lead"> Software Security, Security Strategies in Web Applications.</p>
+                        </div>
+                      </div>
+
+
+                    </div>
+
+        <!-- second -->
+
+        <div class="card-deck">
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+            <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark">Automation Testing</h5>
+              <p class="card-text lead"> Selenium Web Driver, Selenium Grid, JUnit, Maven, TestNG, Jenkins, Cucumber, QTP, Postman, JSON
+              </p>
+            </div>
+          </div>
+
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark"> Software Methodologies</h5>
+              <p class="card-text lead">  Agile Scrum, Waterfall, UML language skills
+              </p>
+            </div>
+          </div>
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark">Testing & Management tools </h5>
+              <p class="card-text lead">JIRA, Confluence
+              </p>
+          </div>
+          </div>
+        </div>
+
+
+        <div class="card-deck">
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+            <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark">Version Control</h5>
+              <p class="card-text lead">Git</p>
+            </div>
+          </div>
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark">Apigee Edge </h5>
+              <p class="card-text lead">Apigee Edge: API Proxy, API Traffic management, Drupal Developer Portal, Authentication, API analytics, MicroGateway, and API Security </p>
+            </div>
+          </div>
+          <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+              <h5 class="card-header text-center text-white bg-dark"> Operating Systems  </h5>
+              <p class="card-text lead"> Operating Systems: Windows, UNIX, Mac, MS-DOS
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card-deck">
+            <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+                <h5 class="card-header text-center text-white bg-dark"> Microsoft Office </h5>
+                <p class="card-text lead">  MS Word, MS Excel, MS PowerPoint, MS Access
+                </p>
+              </div>
+            </div>
+            <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+                <h5 class="card-header text-center text-white bg-dark">Computer Networking </h5>
+                <p class="card-text lead">  Basics of Computer Networking
+                </p>
+              </div>
+            </div>
+            <div class="card">
+           <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+           <div class="card-body">
+                <h5 class="card-header text-center text-white bg-dark">Development and Automation Testing Tools </h5>
+                <p class="card-text lead">  Microsoft Expression Web, Visual Studio, Visual Studio Code, Android Studio, Eclipse, Visual Paradigm, Visio, IntelliJ</p>
+              </div>
+            </div>
+
+
+          </div>
+
+<!-- second -->
+
+
+
+
+
+
+
      <!--the button for downloading my resume-->
 <!--<h4>Download my updated resume</h4>
 <a href="/assets/documents/Abdul Shukor.pdf" download><button class="btn btn-outline-primary"><i class="fa fa-download"></i>&nbsp; Resume</button></a>
 <hr class="my-9" />-->
   </div>
 </div>
+
+
